Fixing cutoff edges on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html {
-    margin: 0;
+    margin: 0px;
     text-decoration: none;
     padding: 0;
 }
@@ -18,6 +18,7 @@ a {
     flex-direction: column;
     max-width: 700px;
     background-color: whitesmoke;
+    margin: 0 10%;
 }
 
 #first {
@@ -181,8 +182,8 @@ a {
         border-radius: 6px;
         align-self: center;
     }
-    #sixth {
-        display: flex;
-        background-color: rgb(179, 141, 93);
-        justify-content: center;
-    }
+#sixth {
+    display: flex;
+    background-color: rgb(179, 141, 93);
+    justify-content: center;
+}
